2008-12-23  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein

        https://bugs.webkit.org/show_bug.cgi?id=21910

        Fix SVGImage painting by ensuring that the SVGImage resizes its FrameView correctly.
        Otherwise the FrameView is left at 0x0, and nothing paints.

        * svg/graphics/SVGImage.cpp:
        (WebCore::SVGImage::draw):

Canonical link: https://commits.webkit.org/31661@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39462 268f45cc-cd09-0410-ab3c-d52691b4dbfc